# predictor

./: .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: d60e808059e0_switch_to_dates_with_timezone.py
predictor/: __init__.py
