[tool.poetry]
name = "predictor"
version = "0.1.0"
description = ""
authors = ["Trevor Glynn <tfglynn@protonmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
psycopg2 = "^2.9.2"
SQLAlchemy = "^1.4.27"
numpy = "^1.21.4"
python-editor = "^1.0.4"
scipy = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
